--- a/graffiti-wall/templates/index.html
+++ b/graffiti-wall/templates/index.html
@@ -10,5 +10,8 @@
     </form>
     <br />
     <a href="/graffiti_wall">The Wall</a>
+    {% if success_message %}
+        <p><span style="color: rgb(128, 0, 128)">{{ timestamp }}: {{ success_message }}</span></p> <!-- This will be blank on first load due to null values -->
+    {% endif %}
 </body>
 </html>
