fix: mobile UX form and button size

--- a/graffiti-wall/templates/index.html
+++ b/graffiti-wall/templates/index.html
@@ -2,10 +2,19 @@
 <html>
 <head>
     <title>Graffiti Wall</title>
+    <style>
+        textarea {
+            width: 100%;
+        }
+        input[type="submit"] {
+            padding: 10px 20px;
+            font-size: 20px;
+        }
+</style>
 </head>
 <body>
     <form action="/" method="POST">
-        <textarea name="text" rows="20" cols="200"></textarea><br>
+        <textarea name="text" rows="10"></textarea><br>
         <input type="submit" value="Submit">
     </form>
     <br />
