--- a/graffiti-wall/templates/index.html
+++ b/graffiti-wall/templates/index.html
@@ -4,11 +4,15 @@
     <title>Graffiti Wall</title>
     <style>
         textarea {
-            width: 100%;
+            width: 95%;
+            font-size:50px;
         }
         input[type="submit"] {
             padding: 10px 20px;
-            font-size: 20px;
+            font-size: 50px;
+        }
+        p {
+            font-size:50px;
         }
 </style>
 </head>
@@ -18,7 +22,7 @@
         <input type="submit" value="Submit">
     </form>
     <br />
-    <a href="/graffiti_wall">The Wall</a>
+    <p><a href="/graffiti_wall">The Wall</a></p>
     {% if success_message %}
         <p><span style="color: rgb(128, 0, 128)">{{ timestamp }}: {{ success_message }}</span></p> <!-- This will be blank on first load due to null values -->
     {% endif %}
